deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phonebook-deployment
  labels:
    app: phonebook
spec:
  replicas: 2
  selector:
    matchLabels:
      app: phonebook
  template:
    metadata:
      labels:
        app: phonebook
    spec:
      containers:
      - name: web
        image: tedytirta/sample-phonebook-app
        ports:
        - containerPort: 8080
