service.yml
apiVersion: v1
kind: Service
metadata:
  name: phonebook-service
  labels:
    app: phonebook
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  selector:
    app: phonebook
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
