ingress-http.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "ingress-http"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: service-nlb
              port:
                number: 80
